[gd_scene load_steps=48 format=2]

[ext_resource path="res://assets/sprites/inan/whip/whip2.png" type="Texture" id=1]
[ext_resource path="res://assets/sprites/inan/whip/whip1.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/inan/whip/whip4.png" type="Texture" id=3]
[ext_resource path="res://assets/sprites/inan/whip/whip3.png" type="Texture" id=4]
[ext_resource path="res://states/persistent_state.gd" type="Script" id=5]
[ext_resource path="res://assets/sprites/inan/MC color.png" type="Texture" id=6]
[ext_resource path="res://assets/sprites/inan/shut/shut1.png" type="Texture" id=7]
[ext_resource path="res://assets/sprites/inan/shut/shut2.png" type="Texture" id=8]
[ext_resource path="res://assets/sprites/inan/shut/shut3.png" type="Texture" id=9]
[ext_resource path="res://assets/sprites/barbar/dash_parry/colort/dash1.png" type="Texture" id=10]
[ext_resource path="res://assets/sprites/barbar/dash_parry/colort/dash2.png" type="Texture" id=11]
[ext_resource path="res://assets/sprites/barbar/walk/walk4_c.png" type="Texture" id=12]
[ext_resource path="res://assets/sprites/barbar/walk/walk2_c.png" type="Texture" id=13]
[ext_resource path="res://assets/sprites/barbar/walk/walk1_c.png" type="Texture" id=14]
[ext_resource path="res://assets/sprites/barbar/walk/walk3_c.png" type="Texture" id=15]
[ext_resource path="res://addons/randomAudioStreamPlayer/random_audio_stream_player.gd" type="Script" id=16]
[ext_resource path="res://assets/sfx/Throw.wav" type="AudioStream" id=17]
[ext_resource path="res://assets/sfx/Dash.wav" type="AudioStream" id=18]
[ext_resource path="res://assets/sfx/Spikes_Dashs.wav" type="AudioStream" id=19]
[ext_resource path="res://assets/sfx/Run.wav" type="AudioStream" id=20]

[sub_resource type="CapsuleShape2D" id=1]
radius = 27.9998
height = 98.0002

[sub_resource type="CapsuleShape2D" id=13]
radius = 22.0
height = 88.0

[sub_resource type="AnimationNodeAnimation" id=32]
animation = "bullet"

[sub_resource type="AnimationNodeAnimation" id=26]
animation = "dash"

[sub_resource type="AnimationNodeAnimation" id=9]
animation = "idle"

[sub_resource type="AnimationNodeAnimation" id=14]
animation = "jab"

[sub_resource type="AnimationNodeAnimation" id=20]
animation = "run"

[sub_resource type="AnimationNodeStateMachineTransition" id=15]

[sub_resource type="AnimationNodeStateMachineTransition" id=16]

[sub_resource type="AnimationNodeStateMachineTransition" id=21]

[sub_resource type="AnimationNodeStateMachineTransition" id=22]

[sub_resource type="AnimationNodeStateMachineTransition" id=23]

[sub_resource type="AnimationNodeStateMachineTransition" id=24]

[sub_resource type="AnimationNodeStateMachineTransition" id=27]

[sub_resource type="AnimationNodeStateMachineTransition" id=28]

[sub_resource type="AnimationNodeStateMachineTransition" id=29]

[sub_resource type="AnimationNodeStateMachineTransition" id=30]

[sub_resource type="AnimationNodeStateMachineTransition" id=33]

[sub_resource type="AnimationNodeStateMachineTransition" id=34]

[sub_resource type="AnimationNodeStateMachine" id=6]
states/bullet/node = SubResource( 32 )
states/bullet/position = Vector2( 36.0614, 16.4074 )
states/dash/node = SubResource( 26 )
states/dash/position = Vector2( 471, 99 )
states/idle/node = SubResource( 9 )
states/idle/position = Vector2( 286.167, 17.2222 )
states/jab/node = SubResource( 14 )
states/jab/position = Vector2( 286.556, 188.333 )
states/run/node = SubResource( 20 )
states/run/position = Vector2( 117.667, 87 )
transitions = [ "idle", "jab", SubResource( 15 ), "jab", "idle", SubResource( 16 ), "idle", "run", SubResource( 21 ), "run", "jab", SubResource( 22 ), "jab", "run", SubResource( 23 ), "run", "idle", SubResource( 24 ), "dash", "run", SubResource( 27 ), "run", "dash", SubResource( 28 ), "idle", "dash", SubResource( 29 ), "dash", "idle", SubResource( 30 ), "idle", "bullet", SubResource( 33 ), "bullet", "idle", SubResource( 34 ) ]
start_node = "idle"
graph_offset = Vector2( -239.272, -67 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=7]

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 6 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HurtboxArea/Hurtbox:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HurtboxArea/Hurtbox:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("HurtboxArea/Hurtbox:rotation_degrees")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath(".:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Sprite:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Sprite:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=31]
resource_name = "bullet"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ) ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "Spikes_Bullets_SFX"
} ]
}

[sub_resource type="Animation" id=25]
resource_name = "dash"
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 10 ), ExtResource( 11 ), ExtResource( 11 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 0,
"values": [  ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "Dash_SFX"
} ]
}

[sub_resource type="Animation" id=3]
resource_name = "idle"
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ ExtResource( 6 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=12]
resource_name = "jab"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("HurtboxArea/Hurtbox:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 90.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HurtboxArea/Hurtbox:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 106, 18 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HurtboxArea/Hurtbox:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "Jab_SFX"
} ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Sprite:texture")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 2 ), ExtResource( 1 ), ExtResource( 4 ), ExtResource( 3 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Sprite:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.05, 0.15, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 17, -16 ), Vector2( 17, -3 ), Vector2( 17, -3 ), Vector2( 1, 0 ) ]
}

[sub_resource type="Animation" id=19]
resource_name = "run"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1.62451, 0.732043, 1.41421, 0.68302, 1.93187 ),
"update": 1,
"values": [ 0.0, 1.0, 0.0, -1.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 14 ), ExtResource( 13 ), ExtResource( 15 ), ExtResource( 12 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "RunSFX"
} ]
}

[node name="Character" type="KinematicBody2D"]
script = ExtResource( 5 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 6 )

[node name="Collision" type="CollisionShape2D" parent="."]
position = Vector2( 2, 99 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="HurtboxArea" type="Area2D" parent="." groups=["hurtbox-character"]]

[node name="Hurtbox" type="CollisionShape2D" parent="HurtboxArea"]
shape = SubResource( 13 )
disabled = true

[node name="Camera2D" type="Camera2D" parent="."]
current = true
limit_left = 0
limit_top = 1
limit_right = 2000
limit_bottom = 1
smoothing_enabled = true

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 6 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 7 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "idle"
reset_on_save = false
anims/RESET = SubResource( 5 )
anims/bullet = SubResource( 31 )
anims/dash = SubResource( 25 )
anims/idle = SubResource( 3 )
anims/jab = SubResource( 12 )
anims/run = SubResource( 19 )

[node name="FirstBullet" type="Position2D" parent="."]
position = Vector2( 35, -65 )

[node name="SecondBullet" type="Position2D" parent="."]
position = Vector2( 45, -10 )

[node name="ThirdBullet" type="Position2D" parent="."]
position = Vector2( 55, 50 )

[node name="JabSFX" type="AudioStreamPlayer" parent="."]
volume_db = -6.0
script = ExtResource( 16 )
samples = [ ExtResource( 17 ) ]
random_volume_range = 0
random_pitch_range = 0

[node name="DashSFX" type="AudioStreamPlayer" parent="."]
script = ExtResource( 16 )
samples = [ ExtResource( 18 ) ]
random_volume_range = 0
random_pitch_range = 0

[node name="SpikesBulletsSFX" type="AudioStreamPlayer" parent="."]
pitch_scale = 0.9
script = ExtResource( 16 )
samples = [ ExtResource( 19 ) ]
random_volume_range = 0
random_pitch_range = 0

[node name="Run" type="AudioStreamPlayer" parent="."]
script = ExtResource( 16 )
samples = [ ExtResource( 20 ), ExtResource( 20 ), ExtResource( 20 ), ExtResource( 20 ) ]
random_volume_range = 0
random_pitch_range = 0

[connection signal="area_entered" from="HurtboxArea" to="." method="_on_HurtboxArea_area_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
